--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-bot.name=TestForTelegramBot_bot
-bot.token=6255351951:AAHbeAPv_0I5YjjFEGQEJ2BjLtkt-KhHcjU
-bot.owner=892391351
+bot.name=TestFlegramBot_bot
+bot.token=6255351951:AAHb_0I5YjjFEGQEJ2BjLtkt-KhHcjU
+bot.owner=892351
